--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "mode": "false",
+  "mode": "true",
   "links": {
-    "1": "https://google.com"
+    "1": "https://xstart.space/click.php?key=0jiklmwy1bzz5j9pubkt"
   },
   "countries": "PT_N"
 }
